chore: clean obsolete template files

--- a/Template_Maquettes/navbar_déroulante.html
+++ b/Template_Maquettes/navbar_déroulante.html
@@ -4,19 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>City HR Portal - Navigation &amp; Footer</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
+    <title>Direction Des Ressources Humaines - Navigation &amp; Footer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap"rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script id="tailwind-config">
       tailwind.config = {
@@ -65,61 +56,54 @@
         <div class="flex items-center gap-8">
           <div class="flex items-center gap-3 text-primary dark:text-white">
             <div
-              class="size-8 bg-primary rounded-lg flex items-center justify-center text-white"
-            >
-              <span class="material-symbols-outlined text-xl"
-                >account_balance</span
-              >
+              class="size-8 bg-primary rounded-lg flex items-center justify-center text-white">
+              <span class="material-symbols-outlined text-xl">account_balance</span>
             </div>
             <h1 class="text-lg font-bold leading-tight tracking-tight">
-              City HR Portal
+              DRH Portail
             </h1>
           </div>
           <nav class="hidden lg:flex items-center gap-6">
             <a
-              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
-              href="#"
-              >Career</a
-            >
-            <a
-              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
-              href="#"
-              >Health &amp; Welfare</a
-            >
-            <a
               class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors border-b-2 border-primary"
-              href="#"
-              >Admin Tools</a
-            >
+              href="#">Documents utiles</a>
             <a
               class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
-              href="#"
-              >My Documents</a
-            >
+              href="#">Prévention</a>
             <a
               class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
-              href="#"
-              >Workplace</a
-            >
+              href="#">Formation</a>
+            <a
+              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
+              href="#">GTT</a>
+            <a
+              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
+              href="#">Carrière</a>
+            <a
+              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
+              href="#">Aides</a>
+              <a
+              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
+              href="#">Emploi</a>
+              <a
+              class="text-primary/70 dark:text-white/70 hover:text-primary dark:hover:text-white text-sm font-semibold transition-colors"
+              href="#">CST</a>
           </nav>
         </div>
         <div class="flex items-center gap-4">
           <div class="relative w-64">
             <span
-              class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-[#5d6389] text-xl"
-              >search</span
-            >
+              class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-[#5d6389] text-xl">search</span>
             <input
               class="w-full bg-[#eaebf1] dark:bg-gray-800 border-none rounded-lg py-2 pl-10 pr-4 text-sm focus:ring-2 focus:ring-primary"
-              placeholder="Search resources..."
-              type="text"
-            />
+              placeholder="Recherche..."
+              type="text"/>
           </div>
           <button
             class="bg-primary text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-2"
           >
             <span class="material-symbols-outlined text-sm">person</span>
-            Agent Profile
+            Agent
           </button>
           <div
             class="size-10 rounded-full bg-cover bg-center border border-gray-200"
@@ -256,6 +240,8 @@
         </div>
       </div>
     </main>
+
+
     <!-- Professional & Institutional Footer -->
     <footer class="w-full mt-12">
       <!-- Quick Access Workplace Section (Gradient Bar) -->
