--- a/Template_Maquettes/index.html
+++ b/Template_Maquettes/index.html
@@ -570,7 +570,7 @@
           <div class="px-4 md:px-10 lg:px-40 py-16 bg-primary dark:bg-secondary/40 text-white mt-10">
             <div class="max-w-[1200px] mx-auto flex flex-col lg:flex-row gap-12 items-center">
               <div class="lg:w-1/3">
-                <h2 class="text-4xl font-bold leading-tight mb-4 italic font-serif-heading">
+                <h2 class="text-4xl font-bold leading-tight mb-4 font-sans serif-heading">
                   Les nouveaux agents
                 </h2>
                 <p class="text-white/70 leading-relaxed mb-6">
