feat: mise à jour maquettes DRH + ajout documentation technique + assets

--- a/Template_Maquettes/Temps_travail_reglementation/temps_travail.html
+++ b/Template_Maquettes/Temps_travail_reglementation/temps_travail.html
@@ -6,40 +6,31 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Working Hours &amp; Regulations Portal</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800;900&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap"rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&family=Shrikhand&family=Squada+One&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
         theme: {
           extend: {
             colors: {
-              primary: "#285c81",
-              "background-light": "#f6f7f8",
-              "background-dark": "#141a1e",
-              "header-blue": "#10142d",
-              "secondary-blue": "#022341",
+              primary: "#10142d",
+              "gov-blue-dark": "#022341",
+              "gov-blue-light": "#073f61",
+              "background-light": "#f6f6f8",
+              "background-dark": "#14151e",
+              secondary: "#022341",
+              accent: "#073f61",
+              ocean: "#275b80",
+              "background-light": "#f8fafc",
             },
             fontFamily: {
-              display: ["Public Sans", "sans-serif"],
-              content: ["Roboto", "sans-serif"],
-              heading: ["Georgia", "serif"],
-            },
-            borderRadius: {
-              DEFAULT: "0.25rem",
-              lg: "0.5rem",
-              xl: "0.75rem",
-              full: "9999px",
+              sans: ["Roboto", "sans-serif"],
+              "serif-heading": ["Georgia", "serif"],
+              "squada-one": ["Squada One", "sans-serif"],
             },
           },
         },
